--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -125,6 +125,10 @@
     <Compile Include="Migrations\202505051814300_AlterWorkflowTypeSlugAsNullable.Designer.cs">
       <DependentUpon>202505051814300_AlterWorkflowTypeSlugAsNullable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202505052002260_TempAddLavaApplications.cs" />
+    <Compile Include="Migrations\202505052002260_TempAddLavaApplications.Designer.cs">
+      <DependentUpon>202505052002260_TempAddLavaApplications.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.Designer.cs">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
@@ -2671,6 +2675,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202505051814300_AlterWorkflowTypeSlugAsNullable.resx">
       <DependentUpon>202505051814300_AlterWorkflowTypeSlugAsNullable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202505052002260_TempAddLavaApplications.resx">
+      <DependentUpon>202505052002260_TempAddLavaApplications.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.resx">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
