--- a/Rock.ViewModels/Rock.ViewModels.csproj
+++ b/Rock.ViewModels/Rock.ViewModels.csproj
@@ -173,11 +173,9 @@
     <Compile Include="Blocks\Group\GroupPlacement\GroupPlacementMappingBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\PlacementConfigurationSettingOptionsBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\PlacementConfigurationSettingsBag.cs" />
-    <Compile Include="Blocks\Group\GroupPlacement\PlacementBag.cs" />
-    <Compile Include="Blocks\Group\GroupPlacement\PlacementGroupDetailsBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\PlacementGroupBag.cs" />
-    <Compile Include="Blocks\Group\GroupPlacement\PlacementGroupTypeRoleBag.cs" />
-    <Compile Include="Blocks\Group\GroupPlacement\PlacementGroupTypeBag.cs" />
+    <Compile Include="Blocks\Group\GroupPlacement\DestinationGroupTypeRoleBag.cs" />
+    <Compile Include="Blocks\Group\GroupPlacement\DestinationGroupTypeBag.cs" />
     <Compile Include="Blocks\Group\GroupPlacement\GroupPlacementInitializationBox.cs" />
     <Compile Include="Blocks\Lms\LearningClassActivityCompletionDetail\LearningClassActivityCompletionBag.cs" />
     <Compile Include="Blocks\Lms\LearningClassActivityCompletionDetail\LearningClassActivityCompletionDetailOptionsBag.cs" />
