--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -720,6 +720,7 @@
     <Compile Include="Bus\Queue\IpGeolocationEventQueue.cs" />
     <Compile Include="ClientService\Core\Note\NoteClientService.cs" />
     <Compile Include="Cms\LavaApplicationRequestHelpers.cs" />
+    <Compile Include="Cms\LavaEndpointAdditionalSettings.cs" />
     <Compile Include="Cms\PageAdditionalSettings.cs" />
     <Compile Include="Cms\RestActionMetadata.cs" />
     <Compile Include="Cms\RestControllerMetadata.cs" />
@@ -805,6 +806,8 @@
     <Compile Include="Model\CMS\LavaEndpoint\LavaEndpoint.cs" />
     <Compile Include="Model\CMS\LavaEndpoint\LavaEndpoint.Logic.cs" />
     <Compile Include="Model\CMS\LavaEndpoint\LavaEndpointService.cs" />
+    <Compile Include="Model\CodeGenerated\LavaApplicationService.CodeGenerated.cs" />
+    <Compile Include="Model\CodeGenerated\LavaEndpointService.CodeGenerated.cs" />
     <Compile Include="Model\CRM\UserLogin\UpdateLastLoginArgs.cs" />
     <Compile Include="Data\AttributeValueExpressionVisitor.cs" />
     <Compile Include="Data\EnableAttributeQualificationAttribute.cs" />
