--- a/Rock.ViewModels/Rock.ViewModels.csproj
+++ b/Rock.ViewModels/Rock.ViewModels.csproj
@@ -206,7 +206,7 @@
     <Compile Include="Blocks\Tv\AppleTvPageList\AppleTvPageListOptionsBag.cs" />
     <Compile Include="Blocks\Cms\PageList\PageListOptionsBag.cs" />
     <Compile Include="Blocks\Cms\PageShortLinkList\PageShortLinkListOptionsBag.cs" />
-    <Compile Include="Blocks\Cms\BlockList\BlockListOptionsBag.cs" />
+    <Compile Include="Blocks\Cms\LayoutBlockList\LayoutBlockListOptionsBag.cs" />
     <Compile Include="Blocks\Cms\ThemeDetail\ThemeBag.cs" />
     <Compile Include="Blocks\Cms\ThemeDetail\ThemeDetailOptionsBag.cs" />
     <Compile Include="Blocks\Cms\ThemeDetail\ThemeFieldBag.cs" />
