--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -129,6 +129,10 @@
     <Compile Include="Migrations\202505072133213_DeleteGroupLocationHistoricalSchedule.Designer.cs">
       <DependentUpon>202505072133213_DeleteGroupLocationHistoricalSchedule.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202505072235453_AddLavaApplications.cs" />
+    <Compile Include="Migrations\202505072235453_AddLavaApplications.Designer.cs">
+      <DependentUpon>202505072235453_AddLavaApplications.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.Designer.cs">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
@@ -2678,6 +2682,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202505072133213_DeleteGroupLocationHistoricalSchedule.resx">
       <DependentUpon>202505072133213_DeleteGroupLocationHistoricalSchedule.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202505072235453_AddLavaApplications.resx">
+      <DependentUpon>202505072235453_AddLavaApplications.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.resx">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
