--- a/Rock.Rest/Rock.Rest.csproj
+++ b/Rock.Rest/Rock.Rest.csproj
@@ -107,6 +107,9 @@
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Diagnostics.DiagnosticSource, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Diagnostics.DiagnosticSource.8.0.0\lib\net462\System.Diagnostics.DiagnosticSource.dll</HintPath>
+    </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.IdentityModel.Tokens.Jwt, Version=5.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.5.7.0\lib\net461\System.IdentityModel.Tokens.Jwt.dll</HintPath>
@@ -206,6 +209,7 @@
     <Compile Include="Controllers\CodeGenerated\WorkflowActionFormSectionsController.CodeGenerated.cs" />
     <Compile Include="Controllers\CodeGenerated\WorkflowFormBuilderTemplatesController.CodeGenerated.cs" />
     <Compile Include="Controllers\EntitySetsController.cs" />
+    <Compile Include="v2\LavaAppController.cs" />
     <Compile Include="Controllers\NotificationMessagesController.Partial.cs" />
     <Compile Include="Controllers\ReminderTypesController.Partial.cs" />
     <Compile Include="Controllers\RemindersController.Partial.cs" />
@@ -392,6 +396,8 @@
     <Compile Include="v2\Models\CodeGenerated\InteractiveExperienceScheduleCampusesController.CodeGenerated.cs" />
     <Compile Include="v2\Models\CodeGenerated\InteractiveExperienceSchedulesController.CodeGenerated.cs" />
     <Compile Include="v2\Models\CodeGenerated\InteractiveExperiencesController.CodeGenerated.cs" />
+    <Compile Include="v2\Models\CodeGenerated\LavaApplicationsController.CodeGenerated.cs" />
+    <Compile Include="v2\Models\CodeGenerated\LavaEndpointsController.CodeGenerated.cs" />
     <Compile Include="v2\Models\CodeGenerated\LavaShortcodesController.CodeGenerated.cs" />
     <Compile Include="v2\Models\CodeGenerated\LayoutsController.CodeGenerated.cs" />
     <Compile Include="v2\Models\CodeGenerated\LearningActivitiesController.CodeGenerated.cs" />
