--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -720,6 +720,8 @@
     <Compile Include="CheckIn\v2\Labels\Renderers\Zebra64.cs" />
     <Compile Include="CheckIn\v2\ProximityDirector.cs" />
     <Compile Include="ClientService\Core\Note\NoteClientService.cs" />
+    <Compile Include="Cms\LavaApplicationRequestHelpers.cs" />
+    <Compile Include="Cms\LavaEndpointAdditionalSettings.cs" />
     <Compile Include="Cms\PageAdditionalSettings.cs" />
     <Compile Include="Cms\RestActionMetadata.cs" />
     <Compile Include="Cms\RestControllerMetadata.cs" />
@@ -789,6 +791,25 @@
     <Compile Include="Jobs\PostUpdateJobs\PostV18UpdateCommunicationRecipientIndex.cs" />
     <Compile Include="Jobs\PostUpdateJobs\PostV171UpdateCommunicationRecipientIndex.cs" />
     <Compile Include="Jobs\PostUpdateJobs\PostV171AddCommunicationRecipientIndex.cs" />
+    <Compile Include="Lava\Blocks\DbTransaction.cs" />
+    <Compile Include="Lava\Blocks\HttpResponse.cs" />
+    <Compile Include="Lava\Blocks\Internal\DbTransactionResult.cs" />
+    <Compile Include="Lava\Blocks\Internal\DeleteEntityResult.cs" />
+    <Compile Include="Lava\Blocks\Internal\ModifyEntityField.cs" />
+    <Compile Include="Lava\Blocks\Internal\ModifyEntityResult.cs" />
+    <Compile Include="Lava\Blocks\Internal\ValidationError.cs" />
+    <Compile Include="Lava\Blocks\RenderLavaEndpoint.cs" />
+    <Compile Include="Lava\Blocks\RockEntityDeleteBlock.cs" />
+    <Compile Include="Lava\Blocks\RockEntityModifyBlock.cs" />
+    <Compile Include="Model\CMS\LavaApplication\LavaApplication.cs" />
+    <Compile Include="Model\CMS\LavaApplication\LavaApplication.Logic.cs" />
+    <Compile Include="Model\CMS\LavaApplication\LavaApplication.SaveHook.cs" />
+    <Compile Include="Model\CMS\LavaApplication\LavaApplicationService.cs" />
+    <Compile Include="Model\CMS\LavaEndpoint\LavaEndpoint.cs" />
+    <Compile Include="Model\CMS\LavaEndpoint\LavaEndpoint.Logic.cs" />
+    <Compile Include="Model\CMS\LavaEndpoint\LavaEndpointService.cs" />
+    <Compile Include="Model\CodeGenerated\LavaApplicationService.CodeGenerated.cs" />
+    <Compile Include="Model\CodeGenerated\LavaEndpointService.CodeGenerated.cs" />
     <Compile Include="Model\CRM\UserLogin\UpdateLastLoginArgs.cs" />
     <Compile Include="Data\AttributeValueExpressionVisitor.cs" />
     <Compile Include="Data\EnableAttributeQualificationAttribute.cs" />
@@ -2793,6 +2814,8 @@
     <Compile Include="Web\Cache\Entities\InteractiveExperienceCache.cs" />
     <Compile Include="Web\Cache\Entities\InteractiveExperienceScheduleCache.cs" />
     <Compile Include="Web\Cache\Entities\GroupLocationCache.cs" />
+    <Compile Include="Web\Cache\Entities\LavaApplicationCache.cs" />
+    <Compile Include="Web\Cache\Entities\LavaEndpointCache.cs" />
     <Compile Include="Web\Cache\Entities\NamedScheduleCache.cs" />
     <Compile Include="Web\Cache\Entities\NamedLocationCache.cs" />
     <Compile Include="Web\Cache\Entities\NotificationMessageTypeCache.cs" />
