+ (Lava) Added a new "Run Lava" scheduled job to execute configured Lava. This new job allows administrators to schedule the execution of Lava templates, leveraging common merge fields and configurable Lava commands which can be useful when invoking external web-requests, performing Lava SQL updates, etc.

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -784,6 +784,7 @@
     <Compile Include="Jobs\PostUpdateJobs\PostV171PopulateAttendanceRootGroupType.cs" />
     <Compile Include="Jobs\PostUpdateJobs\PostV171UpdateCommunicationRecipientIndex.cs" />
     <Compile Include="Jobs\PostUpdateJobs\PostV171AddCommunicationRecipientIndex.cs" />
+    <Compile Include="Jobs\RunLava.cs" />
     <Compile Include="Model\CRM\UserLogin\UpdateLastLoginArgs.cs" />
     <Compile Include="Data\AttributeValueExpressionVisitor.cs" />
     <Compile Include="Data\EnableAttributeQualificationAttribute.cs" />
