--- a/Rock.Lava.Shared/Rock.Lava.Shared.csproj
+++ b/Rock.Lava.Shared/Rock.Lava.Shared.csproj
@@ -1,89 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8820CD93-70EE-496D-B17B-0C4C68DD4957}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rock.Lava</RootNamespace>
-    <AssemblyName>Rock.Lava.Shared</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
+    <TargetFramework>net472</TargetFramework>
+    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
+    <RockWebPath>..\RockWeb</RockWebPath>
+    <CopyToRockWeb>True</CopyToRockWeb>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
+
   <ItemGroup>
     <Compile Include="..\Rock.Version\AssemblySharedInfo.cs">
-      <Link>AssemblySharedInfo.cs</Link>
+      <Link>Properties\AssemblySharedInfo.cs</Link>
     </Compile>
-    <Compile Include="Core\DynamicShortcodeDefinition.cs" />
-    <Compile Include="Core\ILavaHost.cs" />
-    <Compile Include="Core\ILavaSecured.cs" />
-    <Compile Include="Core\ILavaDataDictionary.cs" />
-    <Compile Include="Core\ILavaDataDictionarySource.cs" />
-    <Compile Include="Core\ILavaService.cs" />
-    <Compile Include="Core\ILavaShortcodeProvider.cs" />
-    <Compile Include="Core\ILavaTemplateCacheService.cs" />
-    <Compile Include="Core\IRockLavaElement.cs" />
-    <Compile Include="Core\ILavaTag.cs" />
-    <Compile Include="Core\ILavaBlock.cs" />
-    <Compile Include="Core\LavaDataDictionary.cs" />
-    <Compile Include="Core\LavaDataWrapper.cs" />
-    <Compile Include="Core\LavaEngineConfigurationOptions.cs" />
-    <Compile Include="Core\LavaInterruptException.cs" />
-    <Compile Include="Core\LavaException.cs" />
-    <Compile Include="Core\LavaHiddenAttribute.cs" />
-    <Compile Include="Core\LavaVisibleAttribute.cs" />
-    <Compile Include="Core\LavaRenderParameters.cs" />
-    <Compile Include="Core\LavaTypeAttribute.cs" />
-    <Compile Include="Core\LavaDataObject.cs" />
-    <Compile Include="Core\ILavaRenderContext.cs" />
-    <Compile Include="Core\ILavaElementInfo.cs" />
-    <Compile Include="Core\ILavaEngine.cs" />
-    <Compile Include="Core\ILavaFileSystem.cs" />
-    <Compile Include="Core\ILavaTemplate.cs" />
-    <Compile Include="Core\ILavaElement.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shortcodes\ILavaShortcode.cs" />
-    <Compile Include="Utility\InputParser.cs" />
-    <Compile Include="Utility\LavaDataHelper.cs" />
-    <Compile Include="Utility\LavaDataTypeInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
