- Manual cherry pick of f93760a19c994cebc99edb1af703223a74de2a8d and e0d4e055a9c6a45230e9120efd7e3a2200ec8696

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -1616,6 +1616,7 @@
     <Compile Include="Security\Authentication\OneTimePasscode\OneTimePasscodeAuthenticationResult.cs" />
     <Compile Include="Security\Authentication\PasswordlessAuthentication.cs" />
     <Compile Include="Security\Authentication\Passwordless\PasswordlessAuthenticationState.cs" />
+    <Compile Include="Security\SecurityGrantRules\ConnectionRequestPickerSecurityGrantRule.cs" />
     <Compile Include="SystemGuid\SnippetType.cs" />
     <Compile Include="Transactions\AddInteractionEntityTransaction.cs" />
     <Compile Include="Tv\Classes\AppleTvPageSettings.cs" />
