--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -145,6 +145,10 @@
     <Compile Include="Migrations\202505131934386_CodeGenerated_20250513.Designer.cs">
       <DependentUpon>202505131934386_CodeGenerated_20250513.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202505162026334_AddIsBeaconMonitoringEnabledToPersonalDevice.cs" />
+    <Compile Include="Migrations\202505162026334_AddIsBeaconMonitoringEnabledToPersonalDevice.Designer.cs">
+      <DependentUpon>202505162026334_AddIsBeaconMonitoringEnabledToPersonalDevice.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.Designer.cs">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
@@ -2706,6 +2710,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202505131934386_CodeGenerated_20250513.resx">
       <DependentUpon>202505131934386_CodeGenerated_20250513.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202505162026334_AddIsBeaconMonitoringEnabledToPersonalDevice.resx">
+      <DependentUpon>202505162026334_AddIsBeaconMonitoringEnabledToPersonalDevice.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.resx">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
