--- a/RockWeb/packages.config
+++ b/RockWeb/packages.config
@@ -18,6 +18,7 @@
   <package id="Lucene.Net.QueryParser" version="4.8.0-beta00005" targetFramework="net472" />
   <package id="Lucene.Net.Queries" version="4.8.0-beta00005" targetFramework="net472" />
   <package id="Lucene.Net.Sandbox" version="4.8.0-beta00005" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.ScriptManager.MSAjax" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.ScriptManager.WebForms" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR" version="2.4.3" targetFramework="net472" />
@@ -27,10 +28,14 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.7.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Data.Edm" version="5.8.5" targetFramework="net472" />
+  <package id="Microsoft.Data.OData" version="5.8.5" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="8.0.0" targetFramework="net472" />
@@ -45,6 +50,7 @@
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="5.7.0" targetFramework="net472" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net472" />
@@ -58,6 +64,7 @@
   <package id="OpenTelemetry.Api" version="1.7.0" targetFramework="net472" />
   <package id="OpenTelemetry.Api.ProviderBuilderExtensions" version="1.7.0" targetFramework="net472" />
   <package id="OpenTelemetry.Exporter.OpenTelemetryProtocol" version="1.7.0" targetFramework="net472" />
+  <package id="OpenXMLSDK-MOT" version="2.6.0" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="QRCoder" version="1.3.9" targetFramework="net472" />
   <package id="Serilog" version="3.1.1" targetFramework="net472" />
@@ -68,6 +75,7 @@
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net472" />
+  <package id="System.Interactive.Async" version="3.2.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.UnmanagedMemoryStream" version="4.3.0" targetFramework="net472" />
@@ -75,6 +83,7 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Spatial" version="5.8.5" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
