--- a/Rock.Tests/Rock.Tests.csproj
+++ b/Rock.Tests/Rock.Tests.csproj
@@ -226,6 +226,8 @@
     <Compile Include="..\Rock.Version\AssemblySharedInfo.cs">
       <Link>AssemblySharedInfo.cs</Link>
     </Compile>
+    <Compile Include="Core\Automation\Triggers\EntityChangeCriteriaRuleTests.cs" />
+    <Compile Include="Core\Automation\Triggers\EntityChangeCriteriaTests.cs" />
     <Compile Include="Lava\Helpers\LavaAppendWatchesHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Blocks\Mobile\Cms\DailyChallengeEntryTests.cs" />
