--- a/Rock.ViewModels/Rock.ViewModels.csproj
+++ b/Rock.ViewModels/Rock.ViewModels.csproj
@@ -161,6 +161,11 @@
     <Compile Include="Blocks\Communication\CommunicationTemplateDetail\CommunicationTemplateDetailCommunicationTemplateBag.cs" />
     <Compile Include="Blocks\Communication\CommunicationTemplateDetail\CommunicationTemplateDetailGetPreviewMessageRequestBag.cs" />
     <Compile Include="Blocks\Communication\CommunicationTemplateDetail\CommunicationTemplateDetailInitializationBox.cs" />
+    <Compile Include="Blocks\Core\AutomationTriggerDetail\AutomationEventBag.cs" />
+    <Compile Include="Blocks\Core\AutomationTriggerDetail\AutomationTriggerBag.cs" />
+    <Compile Include="Blocks\Core\AutomationTriggerDetail\AutomationTriggerDetailOptionsBag.cs" />
+    <Compile Include="Blocks\Core\AutomationTriggerDetail\GetComponentDefinitionResponseBag.cs" />
+    <Compile Include="Blocks\Core\AutomationTriggerList\AutomationTriggerListOptionsBag.cs" />
     <Compile Include="Blocks\Core\PersonSuggestionList\PersonSuggestionListOptionsBag.cs" />
     <Compile Include="Blocks\Cms\PageSearch\PageSearchPageBag.cs" />
     <Compile Include="Blocks\Cms\PageSearch\PageSearchBag.cs" />
@@ -552,6 +557,7 @@
     <Compile Include="Controls\NoteEditBag.cs" />
     <Compile Include="Blocks\Core\Notes\NotesInitializationBox.cs" />
     <Compile Include="Controls\NoteTypeBag.cs" />
+    <Compile Include="Controls\DynamicComponentDefinitionBag.cs" />
     <Compile Include="Controls\SaveNoteRequestBag.cs" />
     <Compile Include="Blocks\Core\Notes\WatchNoteRequestBag.cs" />
     <Compile Include="Blocks\Core\NotificationMessageList\GetMessageActionRequestBag.cs" />
@@ -840,6 +846,9 @@
     <Compile Include="Controls\SankeyDiagramSettingsBag.cs" />
     <Compile Include="Controls\SankeyDiagramEdgeBag.cs" />
     <Compile Include="Controls\SankeyDiagramNodeBag.cs" />
+    <Compile Include="Core\Automation\AutomationValueTypeBag.cs" />
+    <Compile Include="Core\Automation\Triggers\EntityChangeSimpleCriteriaBag.cs" />
+    <Compile Include="Core\Automation\Triggers\EntityChangeSimpleCriteriaRuleBag.cs" />
     <Compile Include="Core\EntitySearchQueryBag.cs" />
     <Compile Include="Core\EntitySearchResultsBag.cs" />
     <Compile Include="Controls\FieldPropertyItemBag.cs" />
