- Added a ChartNumericDataPointBag view model to simplify the sending of charting data from server to client.

--- a/Rock.ViewModels/Rock.ViewModels.csproj
+++ b/Rock.ViewModels/Rock.ViewModels.csproj
@@ -841,6 +841,7 @@
     <Compile Include="Controls\MobileNavigationActionBag.cs" />
     <Compile Include="Controls\PhoneNumberBoxWithSmsControlBag.cs" />
     <Compile Include="Controls\NoteMentionItemBag.cs" />
+    <Compile Include="Reporting\ChartNumericDataPointBag.cs" />
     <Compile Include="Rest\CheckIn\ProximityBeaconBag.cs" />
     <Compile Include="Rest\CheckIn\ProximityCheckInOptionsBag.cs" />
     <Compile Include="Rest\Controls\AIProviderPickerGetAIProviderOptionsBag.cs" />
